--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
-  "version": 2,
-  "env": {
-    "CUSTOM_ENV_VARIABLE": "value"
-  },
-  "builds": [{
-    "src": "server.js",
-    "use": "@vercel/node"
-  }],
-  "routes": [{
-    "src": "/api/(.*)",
-    "dest": "/api/$1.js"
-  }]
-}
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/Home.html"
+      }
+    ]
+  }
