--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-EMAIL=danielngwerewe@dinastiadorada.com.pl
-PASSWORD=xvuojacqplzkuypo
+PORT=8000
+EMAIL=info@doradacleaners.pl
+PASSWORD=Daniel511mm1
